# bakasura

bakasura_flow/: README.md  pyproject.toml  requirements.txt
bakasura_flow/chatbot/: ,env  package-lock.json  package.json
bakasura_flow/chatbot/public/: index.html
bakasura_flow/chatbot/src/: App.js  App.jsx
bakasura_flow/chatbot/src/components/: Chatbot.jsx  NewsGenerator.jsx  PoemGenerator.jsx
bakasura_flow/chatbot/src/components/layout/: CatLogo.jsx  Footer.jsx  Navbar.jsx
bakasura_flow/output/: news20250226_205034.txt  poem_20250226_163646.txt  poem_20250226_164544.txt  poem_20250226_164614.txt  poem_20250226_165430.txt  poem_20250226_170713.txt  poem_20250226_171902.txt  poem_20250226_172050.txt  poem_20250226_175905.txt  poem_20250226_180556.txt  poem_20250226_180702.txt  poem_20250226_181505.txt  poem_20250226_182444.txt  poem_20250226_183007.txt  poem_20250226_183105.txt  poem_20250226_183336.txt
bakasura_flow/src/bakasura_flow/: config.py  main.py  news.py
bakasura_flow/src/bakasura_flow/crews/news_crew/: news_crew.py
bakasura_flow/src/service/fastapi/: query_decomposition.py
college_essay/: README.md  pyproject.toml  requirements.txt
college_essay/chatbot/: package-lock.json
college_essay/chatbot/public/: index.html
college_essay/chatbot/src/components/: CollegeEssayStreamer.jsx  essayStore.js
college_essay/src/college_essay/: college_essay_streaming.py  crew.py  main.py
college_essay/src/college_essay/config/: agents.yaml  tasks.yaml
college_essay/src/college_essay/tools/: file_converter.py  json_md_converter.py
(+5 files in other folders)
