[project]
name = "bakasura_flow"
version = "0.1.0"
description = "bakasura_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.47.1",
    "crewai[tools]>=0.102.0,<1.0.0",
    "fpdf>=1.7.2",
    "groq>=0.18.0",
    "instructor>=1.7.2",
]

[project.scripts]
kickoff = "bakasura_flow.main:kickoff"
plot = "bakasura_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
